modified login
