# server/api/controllers/examples/zabbixrouter.js
@@ -3,7 +3,7 @@ import zabbixControler from './zabbixcontroller';
 
 export default express
   .Router()
-  .get('/login', zabbixControler.login)
+  .post('/login', zabbixControler.login)
   .get('/logout', zabbixControler.logout)
   .get('/hosts', zabbixControler.get_hosts)
   .post('/map', zabbixControler.create_map)
